<resources>
    <string name="app_name">Aplikasi Formulir</string>
    <string name="update">Update Data</string>
    <string name="tambah_gambar">tambah_gambar</string>
    <string name="masukan_nama_lengkap">Masukan Nama Lengkap</string>
    <string name="masukan_alamat">Masukan Alamat</string>
    <string name="masukan_password">Masukan Password</string>
    <string name="simpan">Simpan</string>
    <string name="hapus">Hapus</string>
    <string name="masukan_email">Masukan Email</string>
    <string name="tambah_pengguna">tambah_pengguna</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="aplikasi_formulir_sederhana">Aplikasi Formulir Sederhana</string>
    <string name="belum_mempunyai_akun">Belum mempunyai akun?</string>
    <string name="buat_akun_baru">Buat Akun baru</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>